# ttyd

./: .clang-format  .clangd  .gitignore  LICENSE  Makefile  README.md  asmdiff.sh  configure.py  ldscript.lcf  obj_files.mk  ttyd_jp.sha1  ttyd_jp_demo_order.txt
.github/workflows/: build.yml
asm/: DEMOInit.s  DEMOPad.s  ac_crane_timing.s  ac_gauge_timing2.s  ac_lst_rc_keep.s  ac_monosiri_target.s  ac_power_gauge.s  ac_power_gauge_lv2.s  ac_repeatedly.s  ac_shot.s  ac_timing_a.s  ac_timing_wide.s  animdrv.s  arammgr.s  arc.s  arcdiv.s  battle_actrecord.s  battle_attack_audience.s  battle_camera.s  battle_damage.s  battle_disp.s  battle_event_default.s  battle_event_subset.s  battle_icon.s  battle_item_data.s  battle_mario.s  battle_message.s  battle_seq.s  battle_seq_command.s  battle_seq_end.s  battle_stage.s  battle_status_effect.s  battle_status_icon.s  battle_sub.s  battle_unit.s  battle_unit_event.s  battle_weapon_power.s  bgdrv.s  bss.s  cam_road.s  (+239 more)
asm/battle/: battle.s  battle_ac.s  battle_ac_help.s  battle_acrobat.s  battle_actrecord.s  battle_attack_audience.s  battle_audience.s  battle_audience_kinopio.s  battle_break_slot.s  battle_camera.s  battle_damage.s  battle_detect.s  battle_disp.s  battle_enemy_item.s  battle_event_cmd.s  (+21 more)
data/: ctors.s  dtors.s  extabindex.s  rodata_1.s  rodata_2.s  sbss2.s  sbss_1.s  sdata2.s  sdata_1.s  sdata_2.s
docs/: Building.md
include/: countdown.h  event.h  forcedata.h  functions.h  global.h  koopa_motion.h  macros.inc  memory.h  nameent.h  party.h  peach.h  pmario_sound.h  romfont.h  sound.h  statuswindow.h  system.h  texpalette.h  types.h  variables.h
libs/musyx/: .gitignore  CMakeLists.txt  LICENSE
libs/musyx/include/musyx/: adsr.h  assert.h  dspvoice.h  hardware.h  macros.h  musyx.h  platform.h  sal.h  seq.h  snd.h  stream.h  synth.h  synthdata.h  voice.h
libs/musyx/src/musyx/runtime/: dsp_import.c  hardware.c  hw_dolphin.c  hw_dspctrl.c  hw_pc.c  hw_volconv.c  s_data.c  seq.c  seq_api.c  snd3d.c  snd_init.c  snd_midictrl.c  snd_service.c  snd_synthapi.c  stream.c  synth.c  synth_vsamples.c  synthdata.c  synthmacros.c  synthvoice.c
libs/musyx/src/musyx/txwin/: txwin.c
libs/musyx/test/: main.c
sha1/: ttyd.jp.sha1
src/: arcdrv.c  countdown.c  database.c  event.c  main.c  memory.c  party.c  pmario_sound.c  romfont.c  sound.c  statuswindow.c  swdrv.c  system.c  texPalette.c
tools/: elf2dol.c
(+769 files in other folders)
